# axum_trial

./: Cargo.toml  README.md
src/: main.rs
templates/: dynamic_hello.html  hello.html  index.html
vite-project/: app.vue  nitro.config.ts  nuxt.config.ts  package-lock.json  package.json
vite-project/components/: MyName.vue
vite-project/server/api/: name.ts
