[package]
name = "use_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56" }
axum = { version = "0.6.1" }
hyper = { version = "0.14.16", features = ["full"] }
mime = { version = "0.3.16" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.78" }
thiserror = { version = "1.0.30" }
tokio = { version = "1.16.1", features = ["full"] }
tower = { version = "0.4.11" }
tracing = { version = "0.1.30" }
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
