[package]
name = "use_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
askama = "0.14"
axum = { version = "0.8" }
hyper = { version = "1.6", features = ["full"] }
mime = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1.14", features = ["full"] }
tower = { version = "0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
